fix : UI corrections and alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes animatedGradient {
+  0% {
+    background-position: 20% 30%;
+  }
+  25% {
+    background-position: 80% 50%;
+  }
+  50% {
+    background-position: 50% 80%;
+  }
+  75% {
+    background-position: 30% 20%;
+  }
+  100% {
+    background-position: 20% 30%;
+  }
+}
